Refactor mapper service